gcc/testsuite/rust/rustc/ui/suggestions/type-ascription-instead-of-path_dg.rs
fn main() {
    std:io::stdin();
// { dg-error "" "" { target *-*-* } .-1 }
}

